Code baseline for branches (secure, pbac, rbac...)