@@ -41,19 +41,6 @@
 			<groupId>io.inverno.mod</groupId>
 			<artifactId>inverno-web-server</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>io.inverno.mod</groupId>
-			<artifactId>inverno-security-http</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.inverno.mod</groupId>
-			<artifactId>inverno-security-jose</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-jsr310</artifactId>
-		</dependency>
 
 		<dependency>
 			<groupId>org.webjars.npm</groupId>
@@ -85,7 +72,6 @@
 			<artifactId>simplemde</artifactId>
 			<version>1.11.2</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>swagger-ui</artifactId>
@@ -98,11 +84,6 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-layout-template-json</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-transport-classes-epoll</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
@@ -149,7 +130,24 @@
 					<groupId>io.inverno.tool</groupId>
 					<artifactId>inverno-maven-plugin</artifactId>
 					<configuration>
-						<vmOptions>--add-opens reactor.core/reactor.core.publisher=lettuce.core --add-opens org.apache.logging.log4j.core/org.apache.logging.log4j.core.jackson=com.fasterxml.jackson.databind --add-modules io.netty.transport.unix.common,io.netty.transport.classes.epoll,io.netty.transport.epoll.linux.x86_64</vmOptions>
+						<vmOptions>--add-opens reactor.core/reactor.core.publisher=lettuce.core --add-modules io.netty.transport.unix.common,io.netty.transport.classes.epoll,io.netty.transport.epoll.linux.x86_64 -Dorg.apache.logging.log4j.simplelog.level=INFO -Dorg.apache.logging.log4j.level=INFO</vmOptions>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<compilerArgs>
+							<arg>--module-version=${project.version}</arg>
+							<arg>-Ainverno.web.generateOpenApiDefinition=true</arg>
+						</compilerArgs>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+						<argLine>--add-reads io.inverno.app.ticket=com.fasterxml.jackson.datatype.jsr310</argLine>
 					</configuration>
 				</plugin>
 			</plugins>
@@ -157,48 +155,6 @@
 	</build>
 
 	<profiles>
-		<profile>
-			<id>debug</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>io.inverno.tool</groupId>
-						<artifactId>inverno-maven-plugin</artifactId>
-						<configuration>
-						<vmOptions>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000 --add-opens reactor.core/reactor.core.publisher=lettuce.core --add-opens org.apache.logging.log4j.core/org.apache.logging.log4j.core.jackson=com.fasterxml.jackson.databind --add-modules io.netty.transport.unix.common,io.netty.transport.classes.epoll,io.netty.transport.epoll.linux.x86_64</vmOptions>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>build-runtime</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>io.inverno.tool</groupId>
-						<artifactId>inverno-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>build-runtime</id>
-								<phase>package</phase>
-								<goals>
-									<goal>build-runtime</goal>
-								</goals>
-								<configuration>
-									<vm>server</vm>
-									<!-- jdk.crypto.ec: TLS, jdk.jdwp.agent: remote debug -->
-									<addModules>jdk.crypto.ec,jdk.jdwp.agent</addModules>
-									<archiveFormats>
-										<archiveFormat>zip</archiveFormat>
-									</archiveFormats>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
 		<profile>
 			<id>release</id>
 			<build>
@@ -220,7 +176,7 @@
 									<launchers>
 										<launcher>
 											<name>inverno-ticket</name>
-											<vmOptions>-Xms2G -Xmx2G -XX:+UseNUMA -XX:+UseParallelGC --add-opens reactor.core/reactor.core.publisher=lettuce.core --add-opens org.apache.logging.log4j.core/org.apache.logging.log4j.core.jackson=com.fasterxml.jackson.databind --add-modules io.netty.transport.unix.common,io.netty.transport.classes.epoll,io.netty.transport.epoll.linux.x86_64</vmOptions>
+											<vmOptions>-Xms2G -Xmx2G -XX:+UseNUMA -XX:+UseParallelGC --add-opens reactor.core/reactor.core.publisher=lettuce.core --add-modules io.netty.transport.unix.common,io.netty.transport.classes.epoll,io.netty.transport.epoll.linux.x86_64</vmOptions>
 										</launcher>
 									</launchers>
 									<archiveFormats>
@@ -234,7 +190,7 @@
 			</build>
 		</profile>
 		<profile>
-			<id>install-docker</id>
+			<id>install-image</id>
 			<build>
 				<plugins>
 					<plugin>
@@ -251,15 +207,15 @@
 									<vm>server</vm>
 									<!-- jdk.crypto.ec: TLS, jdk.jdwp.agent: remote debug -->
 									<addModules>jdk.crypto.ec</addModules>
-									<executable>inverno-ticket</executable>
+									<executable>ticket</executable>
 									<launchers>
 										<launcher>
-											<name>inverno-ticket</name>
-											<vmOptions>-Xms2G -Xmx2G -XX:+UseNUMA -XX:+UseParallelGC --add-opens reactor.core/reactor.core.publisher=lettuce.core --add-opens org.apache.logging.log4j.core/org.apache.logging.log4j.core.jackson=com.fasterxml.jackson.databind --add-modules io.netty.transport.unix.common,io.netty.transport.classes.epoll,io.netty.transport.epoll.linux.x86_64</vmOptions>
+											<name>ticket</name>
+											<vmOptions>-Xms2G -Xmx2G -XX:+UseNUMA -XX:+UseParallelGC --add-opens reactor.core/reactor.core.publisher=lettuce.core --add-modules io.netty.transport.unix.common,io.netty.transport.classes.epoll,io.netty.transport.epoll.linux.x86_64</vmOptions>
 										</launcher>
 									</launchers>
 									<volumes>
-										<volume>/opt/inverno-ticket/logs</volume>
+										<volume>/opt/ticket/logs</volume>
 									</volumes>
 								</configuration>
 							</execution>
